--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -1,4 +1,13 @@
-.profile-data {
+.profile-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
+
 }
+
+
+.profile {
+background-color: white !important;
+background-image: none;
+}
+
+
