--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -1,8 +1,16 @@
-
+/* 
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap');
 
 body {
     font-family: 'Open Sans', sans-serif;
+} */
+
+.loginContainer {
+    background-image: url('../../assets/peluqueria.webp');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+    width: 100%;
 }
 
 .loginContainer  form {
@@ -16,7 +24,8 @@ body {
     background-color: #f3f3f3;
     padding: 20px;
     border: 3px solid white;
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  
 }
 
 .loginContainer label {
@@ -24,6 +33,14 @@ body {
 }
 
 .loginContainer input {
+    margin: 10px 0px;
+    padding: 10px 5px;
+    border-radius: 5px;
+    width: 95%;
+    border: 1px solid #f8f8f8
+}
+
+.loginContainer select {
     margin: 10px 0px;
     padding: 10px 5px;
     border-radius: 5px;
@@ -46,4 +63,30 @@ body {
     margin: 10px 0px;
     width: 100%;
     color: white;
+}
+
+.button-main {
+    border: none;
+    padding: 10px 5px;
+    cursor: pointer;
+    background-color: darkcyan;
+    border-radius: 5px;
+    margin: 10px 0px;
+    width: 100%;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    font-size: 12px;
+}
+
+.feedback-registro {
+    font-size: 14px;
+}
+
+.error {
+    color: red;
+}
+
+.sucess {
+    color: green;
 }
