--- a/src/pages/table.css
+++ b/src/pages/table.css
@@ -1,24 +1,25 @@
-#customers {
-    font-family: Arial, Helvetica, sans-serif;
+#tabla-turnos {
+    /* font-family: Arial, Helvetica, sans-serif; */
     border-collapse: collapse;
-    width: 100%;
+    width: 80%;
+    margin: 30px auto;
 }
 
-#customers td,
-#customers th {
+#tabla-turnos td,
+#tabla-turnos th {
     border: 1px solid #ddd;
     padding: 8px;
 }
 
-#customers tr:nth-child(even) {
+#tabla-turnos tr:nth-child(even) {
     background-color: #f2f2f2;
 }
 
-#customers tr:hover {
+#tabla-turnos tr:hover {
     background-color: #ddd;
 }
 
-#customers th {
+#tabla-turnos th {
     padding-top: 12px;
     padding-bottom: 12px;
     text-align: left;
